--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
     <body>
         <div class="container">
             <label for="billTotal">Bill Total</label>
-            <input type="number" id="billTotal" placeholder="Enter bill total">
+            <input type="text" id="billTotal" placeholder="Enter bill total">
 
             <label for="tipSlider">Tip Percentage (%)</label>
             <input type="range" id="tipSlider" min="0" max="0" value="15" step="1">
             <span id="tipPercent">15%</span>
+
+            <label for="tipAmount">Tip Amount ($)</label>
+            <input type="text" id="tipAmount" disabled>
+
+            <label for="totalAmount">Total Amount ($)</label>
+            <input type="text" id="totalAmount" disabled>
+
+            <div class="output" id="error"></div>
+        </div>
+        <script src="script.js"></script>
     </body>
 </html>
