--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="container">
             <label for="billTotal">Bill Total</label>
-            <input type="text" id="billTotal" placeholder="Enter bill total">
+            <input type="number" id="billTotal" placeholder="Enter bill total" min="0" required oninput="">
 
             <label for="tipSlider">Tip Percentage (%)</label>
             <input type="range" id="tipSlider" min="0" max="100" value="15" step="1">
